# Matts_Book_Organizer

./: .gitignore  DEPLOY.md  Dockerfile  LICENSE  NETLIFY_DEPLOYMENT.md  README.md  check-changes.sh  crud.py  database.py  debug-git.sh  deploy-to-netlify.sh  fix-and-deploy.sh  fly.toml  main.py  migrate_goodreads.py  models.py  netlify.toml  package-lock.json  package.json  railway.json  render.yaml  requirements.txt  schemas.py  startup.py
.claude/: settings.local.json
.github/workflows/: release.yml
frontend/: .env.example  .gitignore  DEPLOY_TO_NETLIFY.md  README.md  build-test.js  git-setup.sh  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vercel.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.js  api.ts  stores.js  stores.ts
frontend/src/lib/components/: BookCard.svelte  SearchFilters.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/add/: +page.svelte
frontend/src/routes/stats/: +page.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: books.rs  covers.rs  import.rs  metadata.rs  mod.rs  shelves.rs  stats.rs
src/app/: layout.tsx  page.tsx
src/app/book/: page.tsx
src/app/import/: page.tsx
src/app/settings/: page.tsx
src/app/shelves/: page.tsx
src/app/stats/: page.tsx
src/components/: book-form.tsx  book-table.tsx  cover-image.tsx  csv-importer.tsx  rating-stars.tsx  shelf-badge.tsx  shelf-manager.tsx  sidebar.tsx
src/lib/: tauri.ts  utils.ts
(+2 files in other folders)
